--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   font-family: "Inter", "sans serif";
+  font-size: 1rem;
 
 }
 
@@ -26,4 +27,67 @@ header img {
   width: 24px;
   object-fit: cover;
   margin-right: 7px;
+}
+
+/* Article */
+.article {
+  display: flex;
+  width: 60%;
+  margin: 3em auto;
+  padding-bottom: 3em;
+  /* align-items: center; */
+  justify-content: center;
+  border-bottom: 1px solid grey;
+}
+
+.article-main {
+  width: 70%;
+}
+
+.article-img {
+  width: 175px;
+  height: 250px;
+  margin-right: 2em;
+}
+
+.article-img img {
+  /* max-height: 30%; */
+  height: 100%;
+  width: 100%;
+  /* height: 168px; */
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.subtext {
+  margin-top: 1em;
+  display: flex;
+  align-items: center;
+}
+
+.subtext>* {
+  margin-right: .5em;
+  font-size: .8rem;
+}
+
+.subtext img {
+  height: 9px;
+}
+
+.subtext span {
+  letter-spacing: 2px;
+  margin-right: 1em;
+}
+
+.subtext a {
+  color: grey;
+
+}
+
+.article-main .dates {
+  font-weight: 700;
+}
+
+.article-main .body-text {
+  font-weight: 300;
 }
